feat: implement findAll paginated and findBooksByTitle paginated
* Implement both methods with Hateoas
* Add unit tests for service layer
* Add integration tests for controller and repository layers