@@ -1,11 +1,11 @@
 package br.com.wes.service;
 
+import br.com.wes.controller.BookController;
 import br.com.wes.exception.RequiredObjectIsNullException;
 import br.com.wes.exception.ResourceNotFoundException;
 import br.com.wes.mapper.ObjectModelMapper;
 import br.com.wes.model.Book;
 import br.com.wes.repository.BookRepository;
-import br.com.wes.service.BookService;
 import br.com.wes.util.mock.BookMock;
 import br.com.wes.vo.v1.BookVO;
 import org.junit.jupiter.api.BeforeEach;
@@ -14,13 +14,19 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.*;
+import org.springframework.data.web.PagedResourcesAssembler;
+import org.springframework.hateoas.EntityModel;
+import org.springframework.hateoas.Link;
+import org.springframework.hateoas.Links;
+import org.springframework.hateoas.PagedModel;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 @ExtendWith(MockitoExtension.class)
 class BookServiceTest {
@@ -33,6 +39,10 @@ class BookServiceTest {
     private BookRepository bookRepository;
     @Mock
     private ObjectModelMapper mapper;
+    @Mock
+    private PagedResourcesAssembler<BookVO> assembler;
+    @Mock
+    private PagedModel<EntityModel<BookVO>> pagedModel;
 
     @BeforeEach
     void setUp() {
@@ -177,26 +187,44 @@ class BookServiceTest {
     }
 
     @Test
-    public void shouldReturnAllBooksWithSuccess() {
-        List<Book> booksMock = input.mockEntities();
-        when(bookRepository.findAll()).thenReturn(booksMock);
+    public void shouldFindAllBooksWithSuccess() {
+        List<Book> books = input.mockEntities();
+        Page<Book> pageBooks = new PageImpl<>(books);
+        List<BookVO> booksVO = input.mockVOs();
+        Page<BookVO> pageBooksVO = new PageImpl<>(booksVO);
+        Collection<EntityModel<BookVO>> pagedModelContent = Arrays.asList(
+                EntityModel.of(booksVO.get(0)),
+                EntityModel.of(booksVO.get(1)),
+                EntityModel.of(booksVO.get(2))
+        );
+        Pageable pageable = PageRequest.of(0, 10, Sort.by(Sort.Direction.ASC, "title"));
+        Link link = linkTo(methodOn(BookController.class).findAll(pageable.getPageNumber(), pageable.getPageSize(), "asc")).withSelfRel();
 
-        List<BookVO> booksVOMock = input.mockVOs();
-        when(mapper.map(booksMock, BookVO.class)).thenReturn(booksVOMock);
+        when(bookRepository.findAll(PageRequest.of(0, 10, Sort.by(Sort.Direction.ASC, "title")))).thenReturn(pageBooks);
+        when(mapper.map(books.get(0), BookVO.class)).thenReturn(booksVO.get(0));
+        when(mapper.map(books.get(1), BookVO.class)).thenReturn(booksVO.get(1));
+        when(mapper.map(books.get(2), BookVO.class)).thenReturn(booksVO.get(2));
+        when(assembler.toModel(eq(pageBooksVO), eq(link))).thenReturn(pagedModel);
+        when(pagedModel.getContent()).thenReturn(pagedModelContent);
+        when(pagedModel.getLinks()).thenReturn(Links.of(link));
 
-        List<BookVO> books = bookService.findAll();
+        PagedModel<EntityModel<BookVO>> pagedBooks = bookService.findAll(pageable);
+        assertEquals("</api/book/v1?page=0&size=10&direction=asc>;rel=\"self\"", pagedBooks.getLinks().toString());
 
-        BookVO firstBook = books.get(0);
+        List<EntityModel<BookVO>> allBooks = pagedBooks.getContent().stream().toList();
+        assertFalse(allBooks.isEmpty());
+
+        BookVO firstBook = allBooks.getFirst().getContent();
         assertNotNull(firstBook);
         assertNotNull(firstBook.getKey());
         assertNotNull(firstBook.getLinks());
         assertTrue(firstBook.toString().contains("</api/book/v1/0>;rel=\"self\""));
         assertEquals("Author0", firstBook.getAuthor());
         assertEquals("Title0", firstBook.getTitle());
-        assertEquals(0L, firstBook.getPrice());
+        assertEquals(1L, firstBook.getPrice());
         assertEquals(BookMock.DEFAULT_DATE, firstBook.getLaunchDate());
 
-        BookVO secondBook = books.get(1);
+        BookVO secondBook = allBooks.get(1).getContent();
         assertNotNull(secondBook);
         assertNotNull(secondBook.getKey());
         assertNotNull(secondBook.getLinks());
@@ -206,7 +234,7 @@ class BookServiceTest {
         assertEquals(2L, secondBook.getPrice());
         assertEquals(BookMock.DEFAULT_DATE, secondBook.getLaunchDate());
 
-        BookVO thirdBook = books.get(2);
+        BookVO thirdBook = allBooks.get(2).getContent();
         assertNotNull(thirdBook);
         assertNotNull(thirdBook.getKey());
         assertNotNull(thirdBook.getLinks());
@@ -219,10 +247,66 @@ class BookServiceTest {
 
     @Test
     public void shouldReturnEmptyResultWhenDoesNotHaveAnyBookSaved() {
-        when(bookRepository.findAll()).thenReturn(Collections.emptyList());
+        Pageable pageable = PageRequest.of(0, 10, Sort.by(Sort.Direction.ASC, "title"));
 
-        List<BookVO> books = bookService.findAll();
+        when(bookRepository.findAll(pageable)).thenReturn(new PageImpl<>(Collections.emptyList()));
+        when(assembler.toModel(eq(new PageImpl<>(Collections.emptyList())), any(Link.class))).thenReturn(pagedModel);
+        when(pagedModel.getContent()).thenReturn(Collections.emptyList());
+        when(pagedModel.getLinks()).thenReturn(Links.NONE);
 
-        assertTrue(books.isEmpty());
+        PagedModel<EntityModel<BookVO>> allPeople = bookService.findAll(pageable);
+
+        assertTrue(allPeople.getContent().isEmpty());
+        assertTrue(allPeople.getLinks().isEmpty());
+    }
+
+    @Test
+    public void shouldReturnBooksWithSuccessWhenFindByTitle() {
+        List<Book> books = List.of(input.mockEntity());
+        Page<Book> pageBook = new PageImpl<>(books);
+        List<BookVO> booksVO = List.of(input.mockVO());
+        Page<BookVO> pageBooksVO = new PageImpl<>(booksVO);
+        Collection<EntityModel<BookVO>> pagedModelContent = List.of(EntityModel.of(booksVO.getFirst()));
+        Pageable pageable = PageRequest.of(0, 10, Sort.by(Sort.Direction.ASC, "title"));
+        Link link = linkTo(methodOn(BookController.class).findAll(pageable.getPageNumber(), pageable.getPageSize(), "asc")).withSelfRel();
+        String title = "Title0";
+
+        when(bookRepository.findBooksByTitle(title, pageable)).thenReturn(pageBook);
+        when(mapper.map(books.getFirst(), BookVO.class)).thenReturn(booksVO.getFirst());
+        when(assembler.toModel(eq(pageBooksVO), eq(link))).thenReturn(pagedModel);
+        when(pagedModel.getContent()).thenReturn(pagedModelContent);
+        when(pagedModel.getLinks()).thenReturn(Links.of(link));
+
+        PagedModel<EntityModel<BookVO>> pagedBooks = bookService.findBooksByTitle(title, pageable);
+        assertEquals("</api/book/v1?page=0&size=10&direction=asc>;rel=\"self\"", pagedBooks.getLinks().toString());
+
+        List<EntityModel<BookVO>> allBooks = pagedBooks.getContent().stream().toList();
+        assertFalse(allBooks.isEmpty());
+
+        BookVO book = allBooks.getFirst().getContent();
+        assertNotNull(book);
+        assertNotNull(book.getKey());
+        assertNotNull(book.getLinks());
+        assertTrue(book.toString().contains("</api/book/v1/0>;rel=\"self\""));
+        assertEquals("Author0", book.getAuthor());
+        assertEquals("Title0", book.getTitle());
+        assertEquals(1L, book.getPrice());
+        assertEquals(BookMock.DEFAULT_DATE, book.getLaunchDate());
+    }
+
+    @Test
+    public void shouldReturnEmptyResultWhenDoesNotHaveAnyBookWithTitle() {
+        Pageable pageable = PageRequest.of(0, 10, Sort.by(Sort.Direction.ASC, "title"));
+        String title = "Title0";
+
+        when(bookRepository.findBooksByTitle(title, pageable)).thenReturn(new PageImpl<>(Collections.emptyList()));
+        when(assembler.toModel(eq(new PageImpl<>(Collections.emptyList())), any(Link.class))).thenReturn(pagedModel);
+        when(pagedModel.getContent()).thenReturn(Collections.emptyList());
+        when(pagedModel.getLinks()).thenReturn(Links.NONE);
+
+        PagedModel<EntityModel<BookVO>> allBooks = bookService.findBooksByTitle(title, pageable);
+
+        assertTrue(allBooks.getContent().isEmpty());
+        assertTrue(allBooks.getLinks().isEmpty());
     }
 }
